name:                ld35
version:             0.1.0.0
synopsis:            Game for Ludum Dare 35
description:         Please see README.md
homepage:            https://github.com/githubuser/ld35#readme
license:             GPL-3
license-file:        LICENSE.GPL
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Gunnar Bergmann
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:    Game
                    , Draw
                    , Math
                    , Species
                    , Input
                    , World
  build-depends:       base >= 4.7 && < 5
                       , vector
                       , mtl
                       , containers
                       , megaparsec
                       , text
                       , classy-prelude
                       , safe
                       , bytestring
                       , monad-loops
                       , transformers
                       , either
                       , gloss==1.10.*
                       , lens
                       , random
                       , MonadRandom
  default-extensions:  NoImplicitPrelude
                    , OverloadedStrings
                    , BangPatterns
                    , RecordWildCards
  default-language:    Haskell2010

executable ld35-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , ld35
  default-language:    Haskell2010

test-suite ld35-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ld35
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ld35
